@@ -1,3 +1,8 @@
+2013-02-08  Markos Chandras  <markos.chandras@imgtec.com>
+
+	* elf32-metag.c: Use bfd_get_linker_section to get SEC_LINKER_CREATED
+	sections.
+
 2013-02-08  Yufeng Zhang  <yufeng.zhang@arm.com>
 
 	* elf64-aarch64.c (elf64_aarch64_grok_prstatus): Change 'size' from
